test(hitl): 新增 HitlApprovalServiceImpl 单元测试覆盖
- 增加 HitlApprovalServiceImpl 的单元测试类，覆盖核心逻辑和异常情况
- 使用 Mockito 框架模拟依赖项和行为，验证服务方法调用及结果
- 确保 HITL 审批流程中数据正确处理与状态转换
- 提升代码测试覆盖率和稳定性，为后续扩展打基础